ns-deploy-lb.yml
---
# NameSpace 작성 -> 별도의 프로젝트 공간
apiVersion: v1
kind: Namespace
metadata: 
  name: samsung

---
# DeployMent 작성
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: samsung-deploy
  namespace: samsung 
  labels: 
    app: web 
    port: cloud
spec:
  replicas: 3
  selector:  #어떤 라벨을 확인? 
    matchLabels: 
      app: web  #deploy라벨 아님! pod 라벨 지정하는거임
  template:     #여기부터 pod에 대한 정의임
    metadata:   #name을 별도로 지정할 필요는 없음, deploy이름-rs이름-pod이름 식으로 알아서정해짐
      labels:
        app: web #위의 매치라벨스랑 맞춰줘야함
    spec:       #pod안에 뭐가 들어감?(컨테이너 설정) 
      containers:
        - name: web
          image: nginx
          ports:
          - containerPort: 80

          
---
# Sevice(Load Balancer) 작성
apiVersion: v1
kind: Service
metadata: 
  name: samsung-lb
  namespace: samsung
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 랜덤이라 지정 필요없음 , 오히려 지정안하는게 더 좋음
