svc_deploy_shop.yml
---
# svc-shop -> cluster ip 라서 type은 안정해도 됨
kind: Service
apiVersion: v1
metadata:
  name:  svc-shop
spec:
  selector:
    app: shop
  ports:
  - port: 80
    targetPort: 80


---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: shop
        image: pshhhhh98/portal:shop
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80 #pod로 갈 포트이기때문에 80으로 맞춰줘야함
